fix issue with carousel alignment

--- a/packages/bpk-component-card-list/src/BpkCardListRowRail/BpkCardListCarousel.module.scss
+++ b/packages/bpk-component-card-list/src/BpkCardListRowRail/BpkCardListCarousel.module.scss
@@ -62,17 +62,16 @@
 
       @include breakpoints.bpk-breakpoint-mobile {
         // On mobile, if there is more than one card in the viewport, the last card only shows partially, so subtract 0.8 when do the calculation
-        flex: 0 0
-          calc(
-            (
-                100% -
-                  (
-                    tokens.bpk-spacing-md() *
-                      (var(--initially-shown-cards, 3) - 1)
-                  )
-              ) /
-              max(1, (var(--initially-shown-cards, 3) - 0.8))
-          );
+        flex-basis: calc(
+          (
+              100% -
+                (
+                  tokens.bpk-spacing-md() *
+                    (var(--initially-shown-cards, 3) - 1)
+                )
+            ) /
+            max(1, (var(--initially-shown-cards, 3) - 0.8))
+        );
 
         &:first-child {
           padding-left: tokens.bpk-spacing-sm();
@@ -83,6 +82,20 @@
           }
         }
       }
+    }
+  }
+
+  &__row {
+    margin-inline: -1 * tokens.bpk-spacing-md();
+
+    &__card {
+      flex-basis: calc(
+        (
+            100% -
+              (tokens.bpk-spacing-sm() * (var(--initially-shown-cards, 3) - 1))
+          ) /
+          var(--initially-shown-cards, 3)
+      );
     }
   }
 
